# amqp-demo

./: README.md  amqp-demo.cabal
app/: Main.hs
src/: Demo.hs
