name:                amqp-demo
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/gvolpe/amqp-demo#readme
license:             BSD3
license-file:        LICENSE
author:              Gabriel Volpe
maintainer:          gvolpe@github.com
copyright:           Copyright: (c) 2017 Gabriel Volpe
category:            Demo
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Demo
  build-depends:       base >= 4.7 && < 5
                     , amqp
                     , bytestring
  default-language:    Haskell2010

executable amqp-demo-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , amqp-demo
  default-language:    Haskell2010

test-suite amqp-demo-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , amqp-demo
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/gvolpe/amqp-demo
